--- a/index.html
+++ b/index.html
@@ -2,8 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <meta
+      name="description"
+      content="AURA LOOM  where style meets
+    individuality. Crafted with passion, designed for those who dare to be
+    different . Dress bold , live free ."
+    />
+    <meta name="keywords" content="Auraloom" />
+
     <title>Auraloom</title>
   </head>
   <body>
